Changed front page to use CSS grid to make room for tags and years. Reduced background image opacity for readability. Added a jQuery function to make sure the underline doesn't extend past the content on the front page.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,24 @@
+:root {
+  --underline-width: 80%;
+}
 
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 @font-face {
-  font-family: 'GerstnerProgramm';
-  src: url('./../fonts/GerstnerProgramm.otf'); /* IE9 Compat Modes */
-  }
+  font-family: "GerstnerProgramm";
+  src: url("./../fonts/GerstnerProgramm.otf"); /* IE9 Compat Modes */
+}
 
 @font-face {
-    font-family: 'GerstnerProgrammItalic';
-    src: url('./../fonts/GerstnerProgrammItalic.otf'); /* IE9 Compat Modes */
-    }
+  font-family: "GerstnerProgrammItalic";
+  src: url("./../fonts/GerstnerProgrammItalic.otf"); /* IE9 Compat Modes */
+}
 
-header{
-  font-family: 'GerstnerProgramm',sans-serif;
-  color:#FFFFFF;
+header {
+  font-family: "GerstnerProgramm", sans-serif;
+  color: #ffffff;
   letter-spacing: 1px;
   font-size: 18px;
   position: fixed;
@@ -28,52 +33,53 @@ header a:hover {
   font-style: italic;
 }
 
-header a{
+header a {
   display: inline-block;
 }
 
 header a:after {
-  content: '';
+  content: "";
   display: block;
   height: 2px;
   width: 0;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width 0.5s ease, background-color 0.5s ease;
 }
 
-header a:hover:after{
+header a:hover:after {
   width: 100%;
-  background: #FFFFFF;
-
+  background: #ffffff;
 }
 
-.mobile{
+.mobile {
   display: none;
 }
-.Info{
+.Info {
   position: absolute;
   top: 25px;
-  right: 25px;}
+  right: 25px;
+}
 
-body{
-  font-family: 'GerstnerProgramm',sans-serif;
-  background:#000000;
-  color: #FFFFFF;
+body {
+  font-family: "GerstnerProgramm", sans-serif;
+  background: #000000;
+  color: #ffffff;
   letter-spacing: 1px;
-  padding-top:30px;
+  padding-top: 30px;
 }
 
 a {
-    color:#FFFFFF;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-.work{
+.work {
   font-size: 28px;
   margin: 140px 0 0 100px;
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -85,6 +91,7 @@ ul, li {
 
 .work li a {
   display: inline-block;
+  width: 100%;
 }
 
 .work li a:hover {
@@ -96,42 +103,57 @@ ul, li {
   position: fixed;
   top: 200px;
   left: 400px;
-  opacity:0;
+  opacity: 0;
   z-index: -1;
   transition: opacity 600ms;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 .work li a:hover img {
-  opacity: 1;
+  opacity: 0.6;
 }
 
-
 .work li a:after {
-  content: '';
+  content: "";
   display: block;
   height: 1.2px;
   width: 0;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width 0.5s ease, background-color 0.5s ease;
 }
 
-.work li a:hover:after{
-  width: 100%;
-  background: #FFFFFF;
-
+.work li a:hover:after {
+  width: var(--underline-width);
+  background: #ffffff;
 }
 
-.myname{
+.work-items {
+  display: grid;
+  grid-template-columns: 40% 30% 10%;
+}
+
+.work-items li {
+  margin: 0;
+  padding: 0;
+}
+
+.work-items .work-item-info {
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.myname {
   line-height: 1.3;
 }
 
-.aboutme{
+.aboutme {
   text-align: left;
   font-size: 22px;
   margin: 100px 350px 100px 100px;
   line-height: 1.5;
-  position:relative;
+  position: relative;
   z-index: 2;
   width: 550px;
 }
@@ -140,46 +162,44 @@ ul, li {
   font-style: italic;
 }
 
-.aboutme a{
+.aboutme a {
   display: inline-block;
 }
 
 .aboutme a:after {
-  content: '';
+  content: "";
   display: block;
   height: 2px;
   width: 0;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width 0.5s ease, background-color 0.5s ease;
 }
 
-.aboutme a:hover:after{
+.aboutme a:hover:after {
   width: 100%;
-  background: #FFFFFF;
+  background: #ffffff;
 }
-.meme{
-  position:relative;
-
+.meme {
+  position: relative;
 }
 
-.foundme{
-  position:absolute;
+.foundme {
+  position: absolute;
   right: 200px;
   left: 200px;
   top: 0px;
   z-index: -1;
 }
 
-.foundme img{
+.foundme img {
   width: 1000px;
 }
 
 .foundme .animated {
-  display:block;
+  display: block;
 }
 
-
-.findme{
+.findme {
   text-align: left;
   font-size: 22px;
   padding-top: -40px;
@@ -187,56 +207,48 @@ ul, li {
   width: 550px;
 }
 
-
-.findmelinks li{
+.findmelinks li {
   margin-top: 5px;
   padding: 2px;
 }
 
-.findmelinks a{
+.findmelinks a {
   display: inline-block;
 }
 
-.findmelinks a:hover{
+.findmelinks a:hover {
   font-style: italic;
 }
 
-
 .findmelinks a:after {
-  content: '';
+  content: "";
   display: block;
   height: 2px;
   width: 0;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width 0.5s ease, background-color 0.5s ease;
 }
 
-.findmelinks a:hover:after{
+.findmelinks a:hover:after {
   width: 100%;
-  background: #FFFFFF;
-
+  background: #ffffff;
 }
-
-
-
-
-
 
 @media only screen and (max-width: 1125px) {
-
-  .thoughtful{
+  .thoughtful {
     display: none;
   }
-  .mobile{
+  .mobile {
     display: block;
   }
-  .myname{
+  .myname {
     width: 320px;
   }
-  .work{
-      margin: 150px 0 0 22px;
+  .work {
+    margin: 150px 0 0 22px;
   }
-  .aboutme, .findme {
+  .aboutme,
+  .findme {
     padding-left: 25px;
     padding-right: 25px;
     width: 100%;
@@ -246,34 +258,30 @@ ul, li {
     font-size: 20px;
   }
 
-
-  .foundme{
-    position:absolute;
+  .foundme {
+    position: absolute;
     left: 10px;
     top: 2000px;
     z-index: -1;
   }
 
-  .findmelinks a{
+  .findmelinks a {
     text-decoration: underline;
   }
 
-  .aboutme a{
-  text-decoration: underline;
+  .aboutme a {
+    text-decoration: underline;
   }
 
-  .aboutme a{
-  text-decoration: underline;
+  .aboutme a {
+    text-decoration: underline;
   }
-
 
   .aboutme a:after {
-  display: none;
-  }
-
-  .aboutme a:hover:after{
     display: none;
   }
 
-
+  .aboutme a:hover:after {
+    display: none;
+  }
 }
